--- a/index.html
+++ b/index.html
@@ -4,34 +4,100 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SpinTheWheel by Seqed Games | Custom Spin Wheel Experiences</title>
+  
+  <!-- Primary SEO Meta Tags -->
+  <title>Spinify - Free Spin Wheel App for Restaurants & Business | عجلة الحظ للمطاعم</title>
   <meta name="description"
-    content="Create custom branded spin wheels for your events and campaigns. A product of Seqed Games - professional game development company based in Egypt, serving clients globally." />
+    content="Free spin-the-wheel gamification tool for restaurants, cafes & retail. Collect leads, engage customers, boost sales. Available in Egypt & Saudi Arabia. أداة عجلة الحظ المجانية للمطاعم" />
   <meta name="author" content="Seqed Games" />
   <meta name="keywords"
-    content="spin wheel, prize wheel, custom spin wheel, branded games, gamification, Seqed Games, event marketing, lead generation" />
+    content="spin the wheel, spin wheel app, prize wheel, restaurant gamification, lead collection, customer engagement, free spin wheel, عجلة الحظ, أدر واربح, عجلة الحظ للمطاعم, تسويق المطاعم, Spinify, Seqed Games, Egypt, Saudi Arabia, Riyadh, Cairo" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://spinify.seqedgames.com/" />
+  
+  <!-- Geo Targeting -->
+  <meta name="geo.region" content="EG" />
+  <meta name="geo.region" content="SA" />
+  <meta name="geo.placename" content="Cairo, Egypt" />
+  <meta name="geo.placename" content="Riyadh, Saudi Arabia" />
+
+  <!-- Language Alternates (hreflang) -->
+  <link rel="alternate" hreflang="en" href="https://spinify.seqedgames.com/" />
+  <link rel="alternate" hreflang="ar" href="https://spinify.seqedgames.com/#/ar" />
+  <link rel="alternate" hreflang="x-default" href="https://spinify.seqedgames.com/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="SpinTheWheel by Seqed Games | Custom Spin Wheel Experiences" />
+  <meta property="og:url" content="https://spinify.seqedgames.com/" />
+  <meta property="og:title" content="Spinify - Free Spin Wheel App for Business" />
   <meta property="og:description"
-    content="Create custom branded spin wheels for your events and campaigns. Powered by Seqed Games." />
-  <meta property="og:site_name" content="SpinTheWheel by Seqed Games" />
+    content="Free gamification tool for restaurants & retail. Collect leads with fun spin-the-wheel experiences. Made by Seqed Games." />
+  <meta property="og:image" content="https://spinify.seqedgames.com/seqed-games-logo.png" />
+  <meta property="og:site_name" content="Spinify by Seqed Games" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:locale:alternate" content="ar_EG" />
+  <meta property="og:locale:alternate" content="ar_SA" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="SpinTheWheel by Seqed Games" />
-  <meta name="twitter:description" content="Create custom branded spin wheels for your events and campaigns." />
+  <meta name="twitter:title" content="Spinify - Free Spin Wheel App" />
+  <meta name="twitter:description" content="Collect leads with gamification. Free spin wheel for restaurants & business." />
+  <meta name="twitter:image" content="https://spinify.seqedgames.com/seqed-games-logo.png" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/seqed-games-logo.png" />
   <link rel="apple-touch-icon" href="/seqed-games-logo.png" />
 
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Spinify",
+    "applicationCategory": "BusinessApplication",
+    "operatingSystem": "Web",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "description": "Free spin-the-wheel gamification tool for restaurants and businesses. Collect customer leads while engaging them with fun prize wheels.",
+    "creator": {
+      "@type": "Organization",
+      "name": "Seqed Games",
+      "url": "https://seqedgames.com"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "5",
+      "ratingCount": "10"
+    }
+  }
+  </script>
 
-  <!-- Fonts -->
+  <!-- Organization Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Seqed Games",
+    "url": "https://seqedgames.com",
+    "logo": "https://spinify.seqedgames.com/seqed-games-logo.png",
+    "sameAs": [
+      "https://www.linkedin.com/company/seqed-games",
+      "https://twitter.com/seqedgames"
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "EG"
+    }
+  }
+  </script>
+
+  <!-- Fonts - Including Arabic Support -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;700&family=Cairo:wght@300;400;500;700&display=swap"
     rel="stylesheet" />
   <link
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
@@ -91,7 +157,8 @@
             "slate-900": "#0f172a",
           },
           fontFamily: {
-            "display": ["Spline Sans", "sans-serif"],
+            "display": ["Spline Sans", "Cairo", "sans-serif"],
+            "arabic": ["Cairo", "sans-serif"],
           },
           borderRadius: {
             "DEFAULT": "0.25rem",
@@ -106,7 +173,14 @@
   </script>
   <style>
     body {
-      font-family: 'Spline Sans', sans-serif;
+      font-family: 'Spline Sans', 'Cairo', sans-serif;
+    }
+
+    /* RTL Support for Arabic */
+    [dir="rtl"] body,
+    .rtl {
+      font-family: 'Cairo', sans-serif;
+      direction: rtl;
     }
 
     .material-symbols-outlined {
