Add Google Search Console verification meta tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+
   <!-- Primary SEO Meta Tags -->
   <title>Spinify - Free Spin Wheel App for Restaurants & Business | عجلة الحظ للمطاعم</title>
   <meta name="description"
@@ -13,8 +13,9 @@
   <meta name="keywords"
     content="spin the wheel, spin wheel app, prize wheel, restaurant gamification, lead collection, customer engagement, free spin wheel, عجلة الحظ, أدر واربح, عجلة الحظ للمطاعم, تسويق المطاعم, Spinify, Seqed Games, Egypt, Saudi Arabia, Riyadh, Cairo" />
   <meta name="robots" content="index, follow" />
+  <meta name="google-site-verification" content="Cl4pGtQM1mcrXxsgo6wADFlez0CS-4r1nUuHmy2N5x0" />
   <link rel="canonical" href="https://spinify.seqedgames.com/" />
-  
+
   <!-- Geo Targeting -->
   <meta name="geo.region" content="EG" />
   <meta name="geo.region" content="SA" />
@@ -41,7 +42,8 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Spinify - Free Spin Wheel App" />
-  <meta name="twitter:description" content="Collect leads with gamification. Free spin wheel for restaurants & business." />
+  <meta name="twitter:description"
+    content="Collect leads with gamification. Free spin wheel for restaurants & business." />
   <meta name="twitter:image" content="https://spinify.seqedgames.com/seqed-games-logo.png" />
 
   <!-- Favicon -->
@@ -97,7 +99,8 @@
   <!-- Fonts - Including Arabic Support -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;700&family=Cairo:wght@300;400;500;700&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;700&family=Cairo:wght@300;400;500;700&display=swap"
     rel="stylesheet" />
   <link
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
